changed background1 to body and left background2, fixed white spaces

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-#background1{
+body{
 	background: linear-gradient(to bottom, #6495ED 0%, #E6E6FA 100%);
 	background-size: 100%;
 	background-repeat: no-repeat;
